2006-04-06  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/plug-in-run.[ch]: removed plug_in_repeat()...

	* app/actions/plug-in-commands.c: ...and merged it into
	plug_in_repeat_cmd_callback(). It's essentially the same code as
	plug_in_run_cmd_callback() and there's no reason (except
	historical ones) to keep its implementation separate.

2006-04-06  Michael Schumacher  <schumaml@cvs.gnome.org>

	* plug-ins/common/mkgen.pl
	* plug-ins/common/plugin-defs.pl: introduced a new parameter
	'extralibs' and changed mkgen.pl to treat this equally to
	'optional' for non-optional plug-ins that needs different libs on
	different platforms 
	* plug-ins/common/Makefile.am: regenerated

2006-04-05  Michael Schumacher  <schumaml@cvs.gnome.org>

	* configure.in: don't exclude the screenshot plug-in on os_win32
	* plug-ins/common/Makefile.am: change $(SCREENSHOT) into screenshot
	to make the screenshot plug-in build and install on the Microsoft
	Windows platform.

2006-04-05  Sven Neumann  <sven@gimp.org>

	* app/base/lut-funcs.[ch]: minor code cleanup, renamed a function,
	declared some functions as static.

	* app/core/gimpdrawable-equalize.c: changed accordingly.

2006-04-05   Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c
	* app/widgets/gimpimagepropview.c
	* app/widgets/gimpsizebox.c
	* app/widgets/gimptemplateeditor.c: replaced "dpi" with "ppi"
	(bug #326718).

2006-04-05  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/plug-in-proc-frame.[ch]: added
	plug_in_proc_frame_get_return_vals().

	* app/plug-in/plug-in-run.c: removed plug_in_get_return_vals()
	and call plug_in_proc_frame_get_return_vals() instead.
	Don't leak stuff in case calling the plug-in fails.

2006-04-05  Tor Lillqvist  <tml@novell.com>

	* app/core/gimpobject.c (gimp_object_get_memsize): Check if
	object->name is NULL before attempting to pass it to
	g_strdup_printf(). Use "anonymous" for unnamed objects.

2006-04-05  Sven Neumann  <sven@gimp.org>
