@@ -1477,6 +1477,7 @@ compose_dialog (const gchar *compose_type,
                                  -1);
       g_free (label);
     }
+
   gtk_box_pack_start (GTK_BOX (hbox), combo, TRUE, TRUE, 0);
   gtk_widget_show (combo);
 
@@ -1524,10 +1525,17 @@ compose_dialog (const gchar *compose_type,
       gtk_box_pack_start (GTK_BOX (hbox), label, FALSE, FALSE, 0);
       gtk_widget_show (label);
 
-      if (nlayers >= compose_dsc[composeint.compose_idx].num_images)
-        composeint.selected[j].comp.ID = layer_list[nlayers - (j + 1)];
+      if (composeint.compose_idx >= 0 &&
+          nlayers >= compose_dsc[composeint.compose_idx].num_images &&
+          j < nlayers)
+        {
+          composeint.selected[j].comp.ID = layer_list[j];
+        }
       else
-        composeint.selected[j].comp.ID = drawable_ID;
+        {
+          composeint.selected[j].comp.ID = drawable_ID;
+        }
+
       composeint.selected[j].is_ID = TRUE;
 
       combo = gimp_drawable_combo_box_new (check_gray, NULL);
